# termagent

./: .gitignore  GPT4O_QUERY_HANDLING.md  Makefile  README.md  main.py  mcp_integration.py  model.py  pyproject.toml  termagent_graph.py  test_gpt4o_queries.py
agents/: __init__.py  base_agent.py  file_agent.py  git_agent.py  router_agent.py
src/: bash_tool.py  history.py  main.py  model.py  shell_commands.py
src/model/: __init__.py  model.py  tools.py
src/shell/: __init__.py  alias.py  history.py  shell.py
src/termagent/: __init__.py  directory_context.py  executable_cache.py  input_handler.py  main.py  shell_commands.py  shell_detector.py  task_complexity.py  termagent_graph.py
src/termagent/agents/: __init__.py  base_agent.py  docker_agent.py  file_agent.py  git_agent.py  k8s_agent.py  kubernetes_agent.py  router_agent.py  shell_tool.py
src/utils/: message_cache.py
