[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "mcp>=1.12.4",
    "numpy>=2.2.6",
    "pyaudio>=0.2.14",
    "speechrecognition>=3.14.3",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
]
voice = [
    "vosk>=0.3.44",
    "pyaudio>=0.2.11",
    "numpy>=1.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/termagent"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]
